# GLA

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  app.py  cov.xml  log.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: main.yml
crates/search/: Cargo.toml
crates/search/src/: lib.rs  str_match.rs
docs/: schema.md
engine/: __init__.py  engine.py
gla/: __init__.py  constants.py
gla/analyzer/: __init__.py  analyzer.py  engine.py  iterator.py
gla/analyzer/search/: Cargo.toml  __init__.py  search.pyi
gla/analyzer/tests/: analyzer_test.py  conftest.py
gla/models/: __init__.py  criteria.py  entry.py  log.py
gla/models/tests/: criteria_test.py
gla/output/: __init__.py  console.py
gla/plugins/: __init__.py
gla/plugins/resolver/: resolver.py
gla/plugins/transformer/: __init__.py  cef_transformer.py  custom_transformer.py  transformer.py  (+7 more)
gla/testcase/: __init__.py  testcase.py
gla/typings/: __init__.py  alias.py
gla/utilities/: __init__.py  iterator.py  list.py  result.py  strategy.py
model/: __init__.py
models/: __init__.py  log.py
plugin/transformer/: __init__.py  log4j_transformer.py  syslog_transformer.py  transformer.py
plugins/: __init__.py
plugins/resolver/: __init__.py  resolver.py
plugins/transformer/: __init__.py  cef_transformer.py  common_transformer.py  json_transformer.py  log4j_transformer.py  management.py  ncsa_transformer.py  sip_transformer.py  syslog_transformer.py  transformer.py  xml_transformer.py
plugins/validator/: __init__.py
utilities/: __init__.py  strategy.py
(+50 files in other folders)
