[tool.poetry]
name = "gla"
version = "0.1.0"
description = ""
authors = ["Samson Ayeni <nazaritee@pm.me>"]

[tool.poetry.dependencies]
python = "3.6.8"
dateparser = "1.1.3"
pydantic = "1.9.2"
loguru = "^0.7.3"
cchardet = "^2.1.7"
lxml = "^5.3.2"
ijson = "^3.3.0"


[tool.poetry.dev-dependencies]
pytest = "7.0.1"
pytest-cov = "4.0.0"
pre-commit = "2.17.0"
setuptools-rust = "1.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
